--- a/index.html
+++ b/index.html
@@ -25,21 +25,22 @@
         ------------------------------------------>
             <article class="banner">
                 <div class="blogs">
-                    <h1>conmebol</h1> 
-                    <h1>America</h1> 
-                    <h1>2021</h1>
-                    <a target="_blank" href="https://www.programming-hero.com/">Watch Live</a>
+                    <h1>Conmebol America 
+                    2021</h1>
+                    <a class="button" target="_blank" href="https://www.programming-hero.com/"><h3>Watch Live</h3>
                     <i class="fas fa-arrow-right"></i>
+                </a>
                 </div>
                 <div class="thumbnail">
                   <img src="images/banner.png" alt="">
                 </div>
             </article>
+      </header>
 <!---------------------------------------------- 
                   players lest
 ------------------------------------------------->
           <main>
-              <section>
+              <section class="players-wrapper">
                   <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
@@ -104,8 +105,7 @@
                   </div>
               </section>
           </main>
-      </header>
-        <br>
+        <hr>
       <!-- footer section -->
       <footer>
           <div class="footer_banner">
