--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- styls css -->
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/responsive.css">
     <title>responsive-football</title>
 </head>
     <body>
